--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,15 @@
 
     <groupId>org.bgi.flexlab</groupId>
     <artifactId>vcfstats</artifactId>
+    <name>vcfstats</name>
     <version>1.0-SNAPSHOT</version>
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -45,7 +52,7 @@
         </dependency>
     </dependencies>
     <packaging>jar</packaging>
-    <name>vcfstats</name>
+
 
 
 
