--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.bgi.flexlab</groupId>
     <artifactId>vcfstats</artifactId>
     <name>vcfstats</name>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <build>
         <resources>
             <resource>
